fixed spacing on picture component

--- a/src/app/member-checkin/pictures/member-checkin-pictures.component.scss
+++ b/src/app/member-checkin/pictures/member-checkin-pictures.component.scss
@@ -1,17 +1,18 @@
-.grid-list{
- display: flex;
- margin-top: 50px;
- justify-content: space-around;
- flex-wrap: wrap;
- margin-left: 200px;
- margin-right: 200px;
+.grid-list {
+  display: flex;
+  margin: 0 auto;
+  justify-content: space-evenly;
+  flex-wrap: wrap;
+  max-width: 605px;
 }
-.grid-tile{
-  margin-top: 5px;
-  margin-bottom: 10px;
-  width: 31.33%;
+
+.grid-tile {
+  margin: 10px;
+  width: 205px;
 }
-.grid-img{
-  height: 210px;
-  width: 310px;
+
+.grid-img {
+  border: 1px solid #eee;
+  height: 155px;
+  width: 205px;
 }
